添加索引加入换行符

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function initRibao () {
 		ribaoText.value = ''
 		ribaoArr.forEach((i, index) => {
 			// i = index + suffixStr + i
-			ribaoText.value += (index + 1 )+ suffixStr + i
+			ribaoText.value += (index + 1 )+ suffixStr + i + '\r\n'
 		})
 	}
 }
