隐藏掉了日报功能

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <br />
 <div id="qrcode" style="margin-top:15px;width:500px;margin:auto"></div>
 <br />
-<div style="display: flex;width:500px;margin:auto;">
+<div style="display: none;width:500px;margin:auto;">
 <div>
 	<textarea id="ribaoText" style="width:500px;height: 400px;font-size: 20px" placeholder="日报内容粘贴进来"></textarea>
 </div>
